--- a/social/templates/social/post_list.html
+++ b/social/templates/social/post_list.html
@@ -11,9 +11,9 @@
     background-size: cover;
     }
     </style>
-    <div class="container feed-text">
+    <div class="container">
         <div class="row justify-content-center mt-3">
-            <div class="col-md-5 col-sm-12 border-bottom ">
+            <div class="col-md-5 col-sm-12 border-bottom">
                 <h5>Add a post!</h5>
             </div>
         </div>
