--- a/social/templates/social/profile_edit.html
+++ b/social/templates/social/profile_edit.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-5 col-sm-6 ">
-            <a href="{% url 'profile' object.pk %}" class="btn btn-light"> Back to Profile</a>
+            <a href="{% url 'profile' object.pk %}" class="btn btn-outline-primary"> Back to Profile</a>
         </div>
     </div>
 
