--- a/social/templates/social/search.html
+++ b/social/templates/social/search.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-5 col-sm-6 ">
-            <a href="{% url 'post-list' %}" class="btn btn-light"> Back to Feed</a>
+            <a href="{% url 'post-list' %}" class="btn btn-primary"> Back to Feed</a>
         </div>
     </div>
 
