--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -3,7 +3,7 @@
 <header>
     <style>
       body {
-    background-image: url(" https://chelseakrost.com/wp-content/uploads/2020/09/7-principles-of-successful-and-happy-people.png");
+    background-image: url(" https://thumbs.dreamstime.com/z/social-media-vector-background-network-concept-social-media-vector-background-network-concept-creative-sphere-illustration-110744658.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -17,8 +17,8 @@
                       <h1 class="display-2 mt-5"> Feel the Social Experience</h1>
                       <p class="mt-3 lead  mt-5">Connect with friends,Share your moments and discover the difference</p>
                       <div class="d-flex justify-content-center mt-5 gap-5 d-md-block">
-                          <a href="{% url 'account_login' %}" class="btn btn-light btn-lg mr-2"> Sign in</a>
-                          <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Sign up</a>
+                          <a href="{% url 'account_login' %}" class="btn btn-secondary btn-lg mr-2"> Sign in</a>
+                          <a href="{% url 'account_signup' %}" class="btn btn-info btn-lg">Sign up</a>
                       </div>
                   </div>
               </div>
