--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -1,18 +1,18 @@
-<div class="container" >
-<nav class="navbar navbar-expand-lg navbar-light ">
+<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand"
+    <a class="navbar-brand "
        {% if user.is_authenticated %}
        href="{% url 'post-list'%}"
        {% else %}
        href="{% url 'index' %}"
        {% endif %}
 
-    ><i class="fas fa-comment "></i>Stick Social</a>
+    >Stick Social</a>
     <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02" >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
       <form class="d-flex" method="GET" action="{% url 'profile-search' %}">
