--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -19,7 +19,9 @@
         <div class="input-group">
           <span class="input-group-text" id="basic-addon1">@</span>
           <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" name="query" value="{{ request.GET.query}}">
-          <button class="remove-default-btn" type="submit"><i class="fas fa-search"></i></button>
+          <button type="submit" class="btn btn-primary">
+              <i class="fas fa-search"></i>
+          </button>
         </div>
       </form>
       {% if user.is_authenticated %}
